# appss-sdk-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: aiogram_example.py  mock_tracker.py  ptb_example.py  push_bot.py  start_clicked_bot.py
src/appss_sdk/: __init__.py  _client.py  _config.py  _constants.py  _ports.py  _storage_key.py  _telegram.py  _types.py  errors.py  offer.py  push.py
src/appss_sdk/_adapters/: lifecycle.py  logger.py  queue.py  transport.py
src/appss_sdk/_composition/: __init__.py  abstract.py  dispatcher.py  enricher.py  error_factory.py  headers.py
src/appss_sdk/_domain/: __init__.py  event.py  flush.py  response.py  retry.py
src/appss_sdk/telegram/: __init__.py  _extract.py  aiogram.py  bot_api.py  ptb.py
tests/integration/: test_end_to_end.py
tests/unit/: test_config.py  test_constants.py  test_errors.py  test_push.py  test_send_push.py  test_storage_key.py
tests/unit/_adapters/: test_lifecycle.py  test_logger.py  test_queue.py  test_transport.py
tests/unit/_composition/: test_abstract.py  test_dispatcher.py  test_enricher.py  test_error_factory.py  test_headers.py
tests/unit/_domain/: test_event.py  test_flush.py  test_response.py  test_retry.py
tests/unit/telegram/: test_aiogram.py  test_bot_api.py  test_extract.py  test_ptb.py
