[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "appss-sdk"
dynamic = ["version"]
description = "APPSS analytics SDK for Python (async, Telegram bots, servers)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Engagement Labs" }]
requires-python = ">=3.10"
keywords = ["analytics", "sdk", "tracking", "telegram", "bot", "appss"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "freezegun>=1.5",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.7",
]
aiogram = ["aiogram>=3.0"]
ptb = ["python-telegram-bot>=20"]
all = ["appss-sdk[dev,aiogram,ptb]"]

[project.urls]
Homepage = "https://github.com/engagementlabs/appss-sdk-python"
Issues = "https://github.com/engagementlabs/appss-sdk-python/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/appss_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/appss_sdk", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "SIM", "RUF"]
ignore = ["F403", "E712"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E501", "N802"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src/appss_sdk"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/appss_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]
